syntax = "proto3";

package comment;

option go_package = "github.com/dailoi280702/se121/comment-service/pkg/comment";

message Comment {
  int32 id = 1;
  int32 blogId = 2;
  string userId = 3;
  string comment = 4;
  int64 createdAt = 5;
  int64 updatedAt = 6;
}

message Empty {}

service CommentService {
  rpc CreateComment(CreateCommentReq) returns (Empty);
  rpc UpdateComment(UpdateCommentReq) returns (Empty);
  rpc DeleteComment(DeleteCommentReq) returns (Empty);
  rpc GetComment(GetCommentReq) returns (Comment);
  rpc GetAllComment(Empty) returns (stream Comment);
}

message GetCommentReq {
  int32 id = 1;
}

message DeleteCommentReq {
  int32 id = 1;
}

message UpdateCommentReq {
  int32 id = 1;
  optional string comment = 2;
}

message CreateCommentReq {
  int32 blogId = 2;
  string userId = 3;
  string comment = 4;
  int64 createdAt = 5;
  int64 updatedAt = 6;
}
